--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,9 @@
   margin: 0 auto;
   padding: 0;
   text-align: center;
-  max-width: 425px;
   display: flex;
   flex-direction: column;
   width: 100vw;
-  overflow: hidden;
   background: rgb(0,0,0);
   background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 49%, rgba(83,83,83,1) 97%, rgba(46,46,46,1) 100%);
 }
@@ -16,3 +14,19 @@
   margin: 0;
   padding: 0;
 }
+body{
+  overflow-x: hidden;
+  overflow: auto;
+}
+  ::-webkit-scrollbar {
+    width: 0.1rem;
+    height: 0.1rem;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
