--- a/src/components/Favorite/Favorite.module.scss
+++ b/src/components/Favorite/Favorite.module.scss
@@ -1,38 +1,72 @@
 .Favorites{
-    height: 100vh;
+    margin-top: 50px;
+    min-height: 100vh;
     &__title{
         color: red;
     }
+    position: relative;
 }
-
+.exit{
+    position: absolute;
+    top: 50px;
+    left: 20px;
+    cursor: pointer;
+    transition: 0.5s ease-in-out;
+}
+.exit:hover{
+    transform: scale(1.2);
+}
 .List{
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 30px;
     align-items: center;
     list-style: none;
+    margin-bottom: 50px;
     &__item{
-        padding: 12px 10px;
-        font-size: 24px;
+        padding: 12px 50px 12px 10px;
+        position: relative;
+        font-size: 26px;
+        min-height: 150px;
         width: 90%;
         color: floralwhite;
         border-radius: 12px;
         background-color: rgba(245, 245, 245, 0.1);
         box-shadow: 3px 3px 5px  red, 1px 1px 10px gold, 1px 1px 15px yellow;
-        :hover{
-            transform: scale(1.1);
-            background-color: rgba(255, 217, 0, 0.149);
-        }
         &__author{
             margin-top: 12px;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            font-size: 20px;
         }
         &__icon{
             background: transparent;
+            position: absolute;
+            right: 20px;
+            bottom: 10px;
             width: 40px;
             height: 40px;
+            cursor: pointer;
+            :hover{
+                transform: scale(1.05);
+            }
         }
     }
+}
+.deleteicon{
+    position: absolute;
+    background: transparent;
+    top: 20px;
+    right: 20px; 
+    transition: 0.7s ease-in-out;
+    z-index: 33;
+    cursor: pointer;
+    
+}
+
+.deleteicon:hover{
+    transform: rotate(180deg) scale(1.1);
+    
 }
