--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Croissant+One&family=Merriweather:ital@1&family=Poppins&family=Roboto:wght@400;500;700&family=Rubik:ital,wght@0,900;1,800&display=swap');
+
+
 body {
   width: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Croissant One', cursive,
+ 'Merriweather', 
+   'Poppins', 
+   'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
