--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+
+
+
 .App {
   margin: 0 auto;
   padding: 0;
@@ -6,13 +9,20 @@
   flex-direction: column;
   width: 100vw;
   background: rgb(0,0,0);
-  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 49%, rgba(83,83,83,1) 97%, rgba(46,46,46,1) 100%);
+  background: linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,1) 49%, rgb(8, 8, 8) 97%, rgba(46,46,46,1) 100%);
 }
-
+.songText{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  line-height: 1.5em;
+}
 *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+h1,p{
+  line-height: 1.5;
 }
 body{
   overflow-x: hidden;
