--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -34,4 +34,12 @@
   
   .button-text {
     font-size: 20px;
+    font-weight: 400;
   }
+
+  @media screen and (min-width:1220px) {
+    .button-text {
+      font-size: 28px;
+      font-weight: 600;
+    }
+}
