--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -6,20 +6,27 @@
     margin-top: 70px;
 }
 .input{
-    width: 50px;
-    height: 20px;
-    font-size: 16px;
+    width: 10vw;
+    height: 4vw;
+    font-size: 24px;
+    font-weight: 800;
     border-radius: 8px;
     text-align: center;
+    background: transparent;
+    box-shadow: 3px 1px 5px red, -6px -4px 10px yellow, 0px 0px 30px gold;
     color: red;
+    @media screen and (max-width:768px) {
+        font-size: 16px;  
+    }
 }
 .next, .prev{
     border: none;
     cursor: pointer;
     background-color:transparent;
+    box-shadow: 3px 1px 5px red, -6px -4px 10px yellow, 0px 0px 30px gold;
     >img{
-        width: 30px;
-        height: 30px;
+        width: 5vw;
+        height: 5vw;
     }
     :hover{
         transform: scale(1.1);
