--- a/src/components/hallOfGlory/HallOfGlory.modue.scss
+++ b/src/components/hallOfGlory/HallOfGlory.modue.scss
@@ -4,3 +4,9 @@
     flex-direction: column;
     align-items: center;
 }
+.Footer{
+    position: fixed;
+    bottom: 20px;
+    border: 1px solid red;
+    margin-bottom: 50px;
+}
