--- a/src/components/UI/Card/Card.module.scss
+++ b/src/components/UI/Card/Card.module.scss
@@ -16,6 +16,9 @@
 
 }
 .card .top{
+    border-top-right-radius: 10%;
+    border-top-left-radius: 10%;
+
     position: relative;
     display: flex;
     align-items: center;
@@ -25,11 +28,17 @@
     transform: translateY(100px);
 }
 .img{
+    border-radius: 10%;
     width: 100%;
     height: 100%;
-    >img{
-        width: 100%;
+    max-height: 500px;
+    img{
+        border-radius: 10%;
+
+        width: auto;
+        max-width: 100%;
         height: 100%;
+        max-height: 500px;
         object-fit: cover;
     }
 }
@@ -73,6 +82,18 @@
     box-sizing: border-box;
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.81);
     transform: translateY(-160px);
+    border-bottom-left-radius: 10%;
+    border-bottom-right-radius: 10%;
+}
+.card:hover .img{
+    width: 100%;
+    height: 100%;
+    img{
+        max-height: unset;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .card:hover .face2{
     transform: translateY(0);
