--- a/src/components/UI/citates/citateItem/CitateItem.module.scss
+++ b/src/components/UI/citates/citateItem/CitateItem.module.scss
@@ -4,9 +4,21 @@
     display: flex;
 justify-content: space-between;
 align-items: center;
+border-radius: 14px;
     &__text{
         width: 100%;
     }
+}
+.favorite{
+    box-shadow: 
+    inset 0 0 60px rgba(245, 245, 245, 0.097),
+    inset 20px 0 80px rgba(255, 0, 30, 0.051),
+    inset -20px 0px 80px rgba(255, 0, 128, 0.079),
+    inset 20px 0 300px rgba(255, 1, 255, 0.086),
+    inset -20px 0 300px rgba(255, 0, 200, 0.068),
+    0 0 50px #ffffff2d,
+    -10px 0 80px rgba(255, 8, 0, 0.077),
+    10px 0 80px rgba(255, 0, 183, 0.081);
 }
 .heart{
     // position: absolute;
