--- a/src/components/commons/footer/Footer.module.scss
+++ b/src/components/commons/footer/Footer.module.scss
@@ -1,4 +1,4 @@
-@import '../../assets/styles/variables.scss';
+@import '../../../assets/styles/variables.scss';
 .footer{
     display: flex;
     justify-content: space-around;
