--- a/src/components/commons/quoteItem/QuoteItem.module.scss
+++ b/src/components/commons/quoteItem/QuoteItem.module.scss
@@ -30,9 +30,17 @@ main{
 .imageContainer{
     width: 100%;
     height: 100vh;
+    @media screen and (max-width:788px) {
+        height: max-content;
+    }
     &__image{
         width: 100%;
         height: 100%;
+        object-fit: contain;
+        @media screen and (max-width:788px) {
+            height: auto;
+        }
+    object-position: top;
         margin: 0;
         padding: 0;
         position: relative;
@@ -66,19 +74,7 @@ main{
     top: 20px;
     right: 20px;
 }
-.exit{
-    position: absolute;
-    left: 20px;
-    top: 20px;
-    border: none;
-    background: transparent;
-  
-    :hover{
-        text-shadow: 2px 3px 15px gold;
-        color: rgba(255, 0, 0, 0.732);
-        transform: scale(1.1);
-    }
-}
+
 .textContainer{
     padding: 30px;
     transition: max-height 0.9s ease-in-out; /* Add transition property */
@@ -217,6 +213,7 @@ main{
     position: absolute;
     height: 100vh;
     left: 49%;
+    opacity: 0.5;
     @media screen and (max-width:1220px) {
        display: none;
     }
