--- a/src/components/favorites/Favorite.module.scss
+++ b/src/components/favorites/Favorite.module.scss
@@ -13,6 +13,8 @@
     top: 20px;
     left: 20px;
     cursor: pointer;
+    border: none;
+    background: transparent;
     transition: 0.5s ease-in-out;
 }
 .exit:hover{
