--- a/src/components/homeScreen/HomeScreen.module.scss
+++ b/src/components/homeScreen/HomeScreen.module.scss
@@ -26,13 +26,15 @@
 }
   }
   &__Content{
+    margin: 0 auto;
     display: grid;
-    grid-template-columns: 13fr 8fr;
+    grid-template-columns: 15fr 8fr;
     align-items: center;
     gap: 16px;
     justify-content: space-around;
     height: 100dvh;
     min-height: 100dvh;
+    max-width: 1920px;
     padding: 32px 56px;
     overflow-y: scroll;
     position: relative;
@@ -42,13 +44,14 @@
       flex-direction: column;
       gap: 24px;
       align-items: center;
+      justify-content: flex-start;
     }
     @media screen and (max-width: 768px) {
       padding: 16px;
-      padding-top: 120px;
+      flex-direction: column-reverse;
     }
     &__Left{
-      padding-top: 88px;
+      padding-top: 120px;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
@@ -57,6 +60,11 @@
       gap: 24px;
       @media screen and (max-width: 1280px) {
        height: max-content;
+       flex-direction: column-reverse;
+      }
+      @media screen and (max-width: 768px) {
+        order: 2;
+        padding-top: 0px;;
       }
       p{
       font-family: Gilroy;
@@ -72,13 +80,17 @@
     &__Right{
       display: flex;
       height: 100%;
+      min-height: 200px;
       width: 100%;
+      margin-top: 0px;
+      padding-top: 0px;
       >img{
         height: 100%;
         width: 100%;
         object-fit: cover;
         border-radius: 50px;
         @media screen and (max-width: 768px) {
+          order: 1;
           display: none;
         }
       }
@@ -90,6 +102,8 @@
         flex-direction: column;
         align-items: center;
         max-width: 100%;
+        padding-top: 120px;
+
       }
     }
     @media screen and (max-width: 1280px) {
@@ -109,6 +123,15 @@
     height: 1000px;
     padding-top: 20%;
     font-size: 42px;
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 100%;
+      font-size: 24px;
+
+    }
+  
 }
 .SectionsList{
   display: grid;
@@ -119,7 +142,6 @@
     flex-direction: column;
     width: 100%;
     align-items: center;
-    padding-top:calc(150px + 10dvh) ;
   }
   
 }
@@ -158,12 +180,10 @@
     border-radius: 24px;
     height: 100%;
     position: relative;
-    display: flex;
     box-shadow: 2px 2px 10px $acceint-color;
-    justify-content: space-between;
-    align-items: flex-end;
+   
     color: $text-color;
-    overflow: hidden;
+      overflow: hidden;
     @media screen and (max-width: 768px) {
       display: flex;
       flex-direction: column;
@@ -174,14 +194,23 @@
     &__btn{
       z-index: 333;
     }
+    >div{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-end;
+    }
     h4{
       color: $text-color;
       font-family: Gilroy;
       font-size: 24px;
       font-weight: 500;
       line-height: 32px;
-      text-align: left;
+      text-align: right;
       width: 60%;
+      
   
     }
     &__form1{
